2007-10-15  Olav Vitters  <olav@bkor.dhs.org>

	* update-master: Use google search instead of Namazu.

2007-10-07  Olav Vitters  <olav@bkor.dhs.org>

	* update-master: More layout fixes..

2007-10-07  Olav Vitters  <olav@bkor.dhs.org>

	* update-master: Fix CSS location.

2007-10-07  Olav Vitters  <olav@bkor.dhs.org>

	* update-master: Follow new site layout.

2007-08-11  Olav Vitters  <olav@bkor.dhs.org>

	* update-master: Use column-width CSS.

2007-08-06  Olav Vitters  <olav@bkor.dhs.org>

	* update-master: Convert to python. Only show publicly archived
	mailing lists.
	* update-master.pl: Rename to update-master.

2007-06-24  Jeff Waugh  <jdub@perkypants.org>

	* Pretty much everything: Revert this insanity with archive storage
	  directories in non-standard places.
	* upgrade/rebuild scripts: Deleted these, but they're in the history
	  if they are needed in the future.

2006-09-30  Olav Vitters  <olav@bkor.dhs.org>

	* update-master.pl: Correct the directory to be
	/var/lib/mailman/archives/public.

2006-08-02  Olav Vitters  <olav@bkor.dhs.org>

	* archive.pl: Force different different umask from within archive.pl
	to ensure created directories (by archive.pl) are readable by
	everyone.

2006-08-02  Olav Vitters  <olav@bkor.dhs.org>

	* archive.pl: Add -umask 022 option to mhonarc to ensure archives can
	be read.

2006-06-21  Ross Golder  <ross@golder.org>

	* Moved lists from '/var/mailman/web-archives' to
	'/mail/list-archives'.
	* Moved script base from '/var/mailman/mhonarc' to
	'/home/admin/mhonarc'.
	* update.pl: Changed 'ARCHIVE_DIR' to 'PRIVATE_ARCHIVE_DIR'.
	* update.pl: Uses mailman's 'list_lists' instead of relying
	on symlinks.

2005-02-06  Ross Golder  <ross@golder.org>

	* archive.pl: Now checks second and third Received header if it
	fails to parse the first. Added '--debug'.
	* archive.pl: Added 'start-time' and 'end-time' options.
