@@ -210,13 +210,72 @@ sub make_index {
   open INDEX, "> $dirname/index.html" || die "Cannot open index $dirname/index.html: $!\n";
 
   print INDEX <<EOT;
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
-<HTML>
-  <HEAD>
-     <title>The $listname Archives</title>
-  </HEAD>
-  <BODY BGCOLOR="#ffffff">
-     <h1>The $listname Archives </h1>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <link href="/css/layout.css" rel="stylesheet" type="text/css" media="screen">
+  <link href="/css/style.css" rel="stylesheet" type="text/css" media="all">
+  <link rel="icon" type="image/png" href="http://www.gnome.org/img/logo/foot-16.png">
+  <link rel="SHORTCUT ICON" type="image/png" href="http://www.gnome.org/img/logo/foot-16.png">
+  <title>The $listname Archives</title>
+</head>
+
+<body>
+  <!-- site header -->
+  <div id="page">
+    <ul id="general">
+      <li id="siteaction-gnome_home" class="home">
+        <a href="http://www.gnome.org/" title="Home">Home</a>
+      </li>
+      <li id="siteaction-gnome_news">
+        <a href="http://news.gnome.org" title="News">News</a>
+      </li>
+      <li id="siteaction-gnome_projects">
+        <a href="http://www.gnome.org/projects/" title="Projects">Projects</a>
+      </li>
+      <li id="siteaction-gnome_art">
+        <a href="http://art.gnome.org" title="Art">Art</a>
+      </li>
+      <li id="siteaction-gnome_support">
+        <a href="http://www.gnome.org/support/" title="Support">Support</a>
+      </li>
+      <li id="siteaction-gnome_development">
+        <a href="http://developer.gnome.org" title="Development">Development</a>
+      </li>
+      <li id="siteaction-gnome_community">
+        <a href="http://www.gnome.org/community/" title="Community">Community</a>
+      </li>
+    </ul>
+    <div id="header">
+      <h1>The $listname Archives </h1>
+      <div id="control">
+      <div id="search">
+        <form method="get" action="http://www.google.com/custom">
+          <input type="text" name="q" maxlength="255" size="15" class="searchTerms">
+          <input type="hidden" name="domains" value="mail.gnome.org">
+          <select name="hq">
+            <option value="inurl:/archives/$listname/">This mailing list</option>
+            <option value="inurl:/archives/">All mailing lists</option>
+          </select>
+          <input type="hidden" name="sitesearch" value="mail.gnome.org">
+          <input type="submit" class="searchButton" value="Search">
+        </form>
+      </div>
+      </div>
+      <div id="tabs">
+        <ul id="portal-globalnav">
+          <li id="portaltab-root">
+            <a href="/"><span>Home</span></a>
+          </li>
+          <li><a href="/mailman/listinfo"><span>Mailing lists</span></a></li>
+          <li class="selected"><a href="/archives"><span>List archives</span></a></li>
+        </ul>
+      </div> <!-- end of #tabs -->
+    </div> <!-- end of #header -->
+  </div>
+<!-- end site header -->
+
+  <div class="body">
      <p>
       <a href="http://mail.gnome.org/mailman/listinfo/$listname">More info on this list...</a>
      </p>
@@ -230,22 +289,6 @@ Search:
 <input type="text" name="query" size="40">
 <input type="submit" name="submit" value="Search!">
 <a href="/mailman/private/$listname/search">[More...]</a>
-</p>
-</form>
-EOT
-   } else {
-       print INDEX <<EOT;
-<form method="get" action="/mailman/search">
-<p>
-Search:
-<input type="text" name="query" size="40">
-<select name="subquery"> 
- <option value="+uri:/^http://mail.gnome.org/archives/$listname/">This mailing list only</option>
- <option value="">All mailing lists</option>
-</select>
-<input type="hidden" name="reference" value="off">
-<input type="submit" name="submit" value="Search!">
-<a href="/mailman/search">[More...]</a>
 </p>
 </form>
 EOT
@@ -293,9 +336,14 @@ EOT
   }
 
   print INDEX <<EOT;
-        </table>
-  </BODY>
-</HTML>
+  <div id="footer">
+    Copyright &copy; 2005, 2006, 2007 <a href="http://www.gnome.org/">The GNOME Project</a>.<br />
+    <a href="http://validator.w3.org/check/referer">Optimised</a> for <a href="http://www.w3.org/">standards</a>. Hosted by <a href="http://www.redhat.com/">Red Hat</a>.
+  </div>
+
+  </div> <!-- end of div.body -->
+</body>
+</html>
 EOT
     
   close INDEX;
