@@ -1,5 +1,9 @@
 2007-10-15  Olav Vitters  <olav@bkor.dhs.org>
 
+	* archive.pl: Use new style for index pages.
+
+2007-10-15  Olav Vitters  <olav@bkor.dhs.org>
+
 	* update-master: Use google search instead of Namazu.
 
 2007-10-07  Olav Vitters  <olav@bkor.dhs.org>
